@@ -58,9 +58,9 @@ LISPSPECFORM(letstern, 1,0,body)
 LISPSPECFORM(locally, 0,0,body)
 LISPSPECFORM(compiler_let, 1,0,body)
 LISPSPECFORM(progv, 2,0,body)
-LISPSPECFORM(pflet, 1,0,body)
-LISPSPECFORM(plabels, 1,0,body)
-LISPSPECFORM(pmacrolet, 1,0,body)
+LISPSPECFORM(flet, 1,0,body)
+LISPSPECFORM(labels, 1,0,body)
+LISPSPECFORM(macrolet, 1,0,body)
 LISPSPECFORM(function_macro_let, 1,0,body)
 LISPSPECFORM(symbol_macrolet, 1,0,body)
 LISPSPECFORM(if, 2,1,nobody)
