@@ -1489,7 +1489,7 @@ LPARTS='        init defseq backquote defmacro macros1 macros2 defs1 timezone'
 LPARTS=$LPARTS' places floatprint type defstruct format savemem trace compiler'
 LPARTS=$LPARTS' disassem defs2 loop clos condition gstream xcharin keyboard'
 LPARTS=$LPARTS' screen beossock runprog query reploop dribble complete describe'
-LPARTS=$LPARTS' room edit macros3 posix foreign1 defs3 clhs inspect gray'
+LPARTS=$LPARTS' room edit macros3 posix foreign1 clhs inspect gray'
 LPARTS=$LPARTS' german french'
 if [ -z "$with_nounicode" ] ; then
   LPARTS=$LPARTS' spanish'
